# Habit_Tracker

./: README.md  pyproject.toml  requirements.txt
src/: index.html  main.py  predictor_func.py  style.css
src/data/: data.py
src/data/raw/: data.csv  data.py
src/models/: habit_type_predictor.pkl  sentiment_predictor.pkl
src/notebooks/: data_preparation.ipynb  simple_EDA.ipynb
src/scripts/: predictor_func.py
